deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 80
      targetPort: http
