deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
    # cert-manager.io/cluster-issuer: имя-выпускающего
spec:
  ingressClassName: nginx
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  name: http
  tls:
    - hosts:
        - blog.example.com
      secretName: blog-tls
